--- a/src/Ventanas/RegistrarIniciarSesion.form
+++ b/src/Ventanas/RegistrarIniciarSesion.form
@@ -82,15 +82,10 @@
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Component id="jLNombre" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jLDireccion" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="jLNombre" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLDireccion" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
+                                  <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="jTDireccion" max="32767" attributes="0"/>
                                       <Component id="jTNombre" alignment="1" pref="158" max="32767" attributes="0"/>
